fixed some tables and fix auth page

--- a/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-body/insurance-polices-modal-body.component.html
+++ b/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-body/insurance-polices-modal-body.component.html
@@ -12,6 +12,7 @@
 
       <mc-insurance-polices-modal-options
         [specialOptions]="options"
+        *ngIf="modalService.isShow$ | async"
       ></mc-insurance-polices-modal-options>
     </div>
   </div>
