--- a/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-body/insurance-polices-modal-body.component.scss
+++ b/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-body/insurance-polices-modal-body.component.scss
@@ -7,7 +7,7 @@
 
   .modal-body {
     width: 100%;
-    padding: 10px 90px 0 40px;
+    padding: 10px 40px;
 
     &__title {
       font-weight: 500;
