--- a/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-card/insurance-polices-modal-card.component.scss
+++ b/src/app/pages/main-form-content/componets/processing-page/components/insurance-polices-modal-card/insurance-polices-modal-card.component.scss
@@ -1,7 +1,7 @@
 .card-body {
   display: flex;
   flex-direction: column;
-  width: 609px;
+  max-width: 609px;
   max-height: 207px;
   background: #ffffff;
   box-shadow: 2px 2px 19px rgba(52, 62, 72, 0.21);
