--- a/src/app/core/broker-auth/components/broker-auth-tabs/broker-auth-tabs.component.html
+++ b/src/app/core/broker-auth/components/broker-auth-tabs/broker-auth-tabs.component.html
@@ -12,7 +12,7 @@
       />
       <span class="tab-item__text">Email</span>
     </ng-template>
-    <ng-content></ng-content>
+    <ng-content select="[emailRegistration]"></ng-content>
   </mat-tab>
 
   <mat-tab>
@@ -24,5 +24,6 @@
       />
       <span class="tab-item__text">По ID-дилера</span>
     </ng-template>
+    <ng-content select="[idRegistration]"></ng-content>
   </mat-tab>
 </mat-tab-group>
