--- a/src/app/core/broker-auth/components/auth-email-form/auth-email-form.component.scss
+++ b/src/app/core/broker-auth/components/auth-email-form/auth-email-form.component.scss
@@ -42,8 +42,8 @@
       line-height: 130%;
     }
 
-    &__validation-code::focus,
-    &__phone::focus {
+    &__validation-code:focus,
+    &__phone:focus {
       background-color: #ffffff;
     }
   }
