--- a/src/app/core/broker-auth/components/broker-auth-page/broker-auth-page.component.html
+++ b/src/app/core/broker-auth/components/broker-auth-page/broker-auth-page.component.html
@@ -12,10 +12,10 @@
         </p>
       </div>
 
-      <mc-broker-auth-tabs>
-        <mc-auth-email-form emailRegistration></mc-auth-email-form>
-        <mc-auth-broker-id-form idRegistration></mc-auth-broker-id-form>
-      </mc-broker-auth-tabs>
+      <app-broker-auth-tabs>
+        <app-auth-email-form emailRegistration></app-auth-email-form>
+        <app-auth-broker-id-form idRegistration></app-auth-broker-id-form>
+      </app-broker-auth-tabs>
     </div>
 
     <!-- <p class="">
