--- a/src/app/pages/main-form-content/main-form-content-page.component.html
+++ b/src/app/pages/main-form-content/main-form-content-page.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <mc-main-form-header></mc-main-form-header>
+  <app-main-form-header></app-main-form-header>
   <main class="main-container">
     <nav class="nav-container">
       <ul class="nav-list">
