--- a/src/app/pages/broker-auth/components/auth-broker-id-form/auth-broker-id-form.component.scss
+++ b/src/app/pages/broker-auth/components/auth-broker-id-form/auth-broker-id-form.component.scss
@@ -42,8 +42,8 @@
       line-height: 130%;
     }
 
-    &__validation-code::focus,
-    &__phone::focus {
+    &__validation-code:focus,
+    &__phone:focus {
       background-color: #ffffff;
     }
   }
@@ -70,17 +70,19 @@
       border: 1px solid #a3aed0;
       border-radius: 2px;
       cursor: pointer;
+      opacity: 0;
     }
 
-    // &__success::after {
-    //   content: '';
-    //   position: absolute;
-    //   top: 0;
-    //   left: 0;
-    //   height: 100%;
-    //   width: 100%;
-    //   background-color: transparent;
-    // }
+    &__success::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      border: 1px solid #A3AED0;
+      background-color: transparent;
+    }
   }
 
   &-button {
