--- a/src/app/pages/user-auth/components/register/register.component.html
+++ b/src/app/pages/user-auth/components/register/register.component.html
@@ -29,32 +29,32 @@
             />
           </fieldset>
 
-<!--          <fieldset class="auth-form-item">-->
-<!--            <div class="auth-form-item__wrapper">-->
-<!--              <label for="secret_key" class="auth-form-item__label"-->
-<!--                >Код проверки*</label-->
-<!--              >-->
+          <!--          <fieldset class="auth-form-item">-->
+          <!--            <div class="auth-form-item__wrapper">-->
+          <!--              <label for="secret_key" class="auth-form-item__label"-->
+          <!--                >Код проверки*</label-->
+          <!--              >-->
 
-<!--              <img-->
-<!--                src="../../../../../assets/images/tooltip_item.svg"-->
-<!--                alt="tool-tip"-->
-<!--                [matTooltipClass]="{'tool-tip': true}"-->
-<!--                class="example-tab-icon"-->
-<!--                matTooltip="tooltip"-->
-<!--                #tool="matTooltip"-->
-<!--                (click)="openTooltip(tool)"-->
-<!--                (focus)="tool.show()"-->
-<!--              />-->
-<!--            </div>-->
+          <!--              <img-->
+          <!--                src="../../../../../assets/images/tooltip_item.svg"-->
+          <!--                alt="tool-tip"-->
+          <!--                [matTooltipClass]="{'tool-tip': true}"-->
+          <!--                class="example-tab-icon"-->
+          <!--                matTooltip="tooltip"-->
+          <!--                #tool="matTooltip"-->
+          <!--                (click)="openTooltip(tool)"-->
+          <!--                (focus)="tool.show()"-->
+          <!--              />-->
+          <!--            </div>-->
 
-<!--            <input-->
-<!--              type="text"-->
-<!--              class="auth-form-item__validation-code"-->
-<!--              placeholder="Мы выслали код на ваш номер"-->
-<!--              name="secret_key"-->
-<!--              formControlName="secret_key"-->
-<!--            />-->
-<!--          </fieldset>-->
+          <!--            <input-->
+          <!--              type="text"-->
+          <!--              class="auth-form-item__validation-code"-->
+          <!--              placeholder="Мы выслали код на ваш номер"-->
+          <!--              name="secret_key"-->
+          <!--              formControlName="secret_key"-->
+          <!--            />-->
+          <!--          </fieldset>-->
 
           <button
             class="auth-form-button"
@@ -72,14 +72,14 @@
     </div>
 
     <div class="personal-service">
-<!--      <mc-tes-navigation-logo></mc-tes-navigation-logo>-->
+      <!--      <mc-tes-navigation-logo></mc-tes-navigation-logo>-->
     </div>
     <!-- <p class="">
           <a [routerLink]="['/login']">Have an account?</a>
         </p> -->
-    <app-backend-error-messages
+    <!-- <app-backend-error-messages
       *ngIf="backandErrors$ | async"
       [backendErrors]="backandErrors$ | async"
-    ></app-backend-error-messages>
+    ></app-backend-error-messages> -->
   </div>
 </div>
