--- a/src/app/pages/broker-auth/components/auth-broker-id-form/auth-broker-id-form.component.scss
+++ b/src/app/pages/broker-auth/components/auth-broker-id-form/auth-broker-id-form.component.scss
@@ -53,6 +53,7 @@
     align-items: center;
     flex-direction: row-reverse;
     color: #bababa;
+    background: transparent;
 
     &__label {
       font-weight: 400;
@@ -71,6 +72,7 @@
       border-radius: 2px;
       cursor: pointer;
       opacity: 0;
+      background: transparent;
     }
 
     &__success::after {
@@ -80,8 +82,8 @@
       left: 0;
       height: 100%;
       width: 100%;
-      border: 1px solid #A3AED0;
-      background-color: transparent;
+      border: 1px solid #a3aed0;
+      background: transparent;
     }
   }
 
