--- a/src/app/pages/main-form-content/componets/main-form-header/main-form-header.component.html
+++ b/src/app/pages/main-form-content/componets/main-form-header/main-form-header.component.html
@@ -5,7 +5,7 @@
         <img class="logo__img" src="/assets/images/header-logo.svg" alt="" />
       </a>
       <div class="title-container">
-        <p>Кредитный калькулятор</p>
+        <p>Кредитный и страховой калькулятор</p>
       </div>
     </div>
     <div class="user__container">
