--- a/src/app/pages/main-form-content/main-form-content-page.component.html
+++ b/src/app/pages/main-form-content/main-form-content-page.component.html
@@ -29,6 +29,8 @@
         </li>
       </ul>
     </nav>
+    <!-- <app-side-bar [steps]="calculationSteps"></app-side-bar> -->
+
     <router-outlet></router-outlet>
   </main>
 </div>
