--- a/src/app/pages/main-form-content/main-form-content-page.component.html
+++ b/src/app/pages/main-form-content/main-form-content-page.component.html
@@ -1,36 +1,41 @@
 <div class="wrapper">
   <app-main-form-header></app-main-form-header>
-  <main class="main-container">
-    <nav class="nav-container">
-      <ul class="nav-list">
-        <li class="nav-list-item">
-          <a
-            class="nav-list-item-link"
-            routerLink="loan-calculation"
-            [routerLinkActive]="['activated']"
-            >Расчет кредита</a
-          >
-        </li>
-        <li class="nav-list-item">
-          <a
-            class="nav-list-item-link"
-            routerLink="processing"
-            [routerLinkActive]="['activated']"
-            >Оформление</a
-          >
-        </li>
-        <li class="nav-list-item">
-          <a
-            class="nav-list-item-link"
-            routerLink="documents-payments"
-            [routerLinkActive]="['activated']"
-            >Документы и платежи</a
-          >
-        </li>
-      </ul>
-    </nav>
-    <!-- <app-side-bar [steps]="calculationSteps"></app-side-bar> -->
 
+  <nav class="nav-container">
+    <!-- <mat-tab-group>
+      <mat-tab label="Расчет кредита"></mat-tab>
+      <mat-tab label="Оформление"> </mat-tab>
+      <mat-tab label="Документы и платежи"></mat-tab>
+    </mat-tab-group> -->
+    <ul class="nav-list">
+      <li class="nav-list-item">
+        <a
+          class="nav-list-item-link"
+          routerLink="loan-calculation"
+          [routerLinkActive]="['activated']"
+          isActive="true"
+          >Расчет кредита</a
+        >
+      </li>
+      <li class="nav-list-item">
+        <a
+          class="nav-list-item-link"
+          routerLink="processing"
+          [routerLinkActive]="['activated']"
+          >Оформление</a
+        >
+      </li>
+      <li class="nav-list-item">
+        <a
+          class="nav-list-item-link"
+          routerLink="documents-payments"
+          [routerLinkActive]="['activated']"
+          >Документы и платежи</a
+        >
+      </li>
+    </ul>
+  </nav>
+  <main class="main-container">
     <router-outlet></router-outlet>
   </main>
 </div>
