--- a/src/app/pages/main-form-content/sub-pages/processing-page/components/questionnaire-form/questionnaire-form.component.html
+++ b/src/app/pages/main-form-content/sub-pages/processing-page/components/questionnaire-form/questionnaire-form.component.html
@@ -45,5 +45,11 @@
     </div>
   </form>
 
-  <button mat-button (click)="openInsuranceModal()">Open dialog</button>
+  <button
+    class="change-options__button"
+    mat-button
+    (click)="openInsuranceModal()"
+  >
+    Изменить
+  </button>
 </div>
