--- a/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-body/insurance-polices-modal-body.component.html
+++ b/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-body/insurance-polices-modal-body.component.html
@@ -11,8 +11,8 @@
       </div>
 
       <app-insurance-polices-modal-options
+        *ngIf="!isHiden"
         [specialOptions]="options"
-        *ngIf="modalService.isShow$ | async"
       ></app-insurance-polices-modal-options>
     </div>
   </div>
