--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -9,10 +9,9 @@
       [label]="step.path"
     >
       <ng-template matStepLabel>{{ step.content }}</ng-template>
-      <ng-template matStepContent>
-        <p>{{ step.path }}</p>
+      <!-- <ng-template matStepContent>
         <router-outlet></router-outlet>
-      </ng-template>
+      </ng-template> -->
     </mat-step>
   </mat-vertical-stepper>
 </div>
