--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -14,7 +14,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
   height: 100%;
   width: 100vw;
   font-size: 100%;
