fix show gide special opions on modal

--- a/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-body/insurance-polices-modal-body.component.html
+++ b/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-body/insurance-polices-modal-body.component.html
@@ -6,6 +6,7 @@
         <app-insurance-polices-modal-card
           *ngFor="let card of cardsObjects; let i = index"
           [insuranceCompany]="card"
+          (hideOptions)="readOutputValueEmitted($event)"
           (click)="getCard(card)"
         ></app-insurance-polices-modal-card>
       </div>
