--- a/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-card/insurance-polices-modal-card.component.html
+++ b/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-card/insurance-polices-modal-card.component.html
@@ -38,7 +38,11 @@
       {{ card.description }}
     </div>
 
-    <div class="card-content__options" *ngIf="card.options">
+    <div
+      class="card-content__options"
+      *ngIf="card.options"
+      (click)="sendIsHidenValues(hideOptions.isHiden)"
+    >
       Настроить опции
     </div>
 
