--- a/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-card/insurance-polices-modal-card.component.scss
+++ b/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-card/insurance-polices-modal-card.component.scss
@@ -39,6 +39,7 @@
     }
 
     &__options {
+      cursor: pointer;
       background: #ffffff;
       padding: 6px 22.5px;
       font-weight: 500;
