--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -19,7 +19,7 @@ body {
   width: 100vw;
   font-size: 100%;
   line-height: 1;
-  overflow-y: hidden;
+  overflow-y: visible;
   overflow-x: hidden;
 }
 
