--- a/src/app/pages/main-form-content/sub-pages/documents-payments-page/documents-payments-page.component.scss
+++ b/src/app/pages/main-form-content/sub-pages/documents-payments-page/documents-payments-page.component.scss
@@ -2,7 +2,7 @@
   padding: 31px 35px;
   margin: 0 auto;
   width: 96%;
-  height: 80vh;
+  min-height: 80vh;
   background: #ffffff;
   box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
   border-radius: 30px;
@@ -13,8 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
-  &__title {
+  s &__title {
     font-weight: 400;
     font-size: 30px;
     line-height: 130%;
