--- a/src/app/pages/main-form-content/sub-pages/processing-page/components/questionnaire-form/questionnaire-form.component.scss
+++ b/src/app/pages/main-form-content/sub-pages/processing-page/components/questionnaire-form/questionnaire-form.component.scss
@@ -1,7 +1,7 @@
 .questionnaire-container {
   padding: 20px;
   min-width: 75vw;
-  height: 80vh;
+  min-height: 80vh;
   background: #ffffff;
   box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
   border-radius: 30px;
@@ -9,6 +9,54 @@
   .registration {
     display: flex;
     flex-direction: column;
+
+    .family__form-group,
+    .residential-address__form-group,
+    .passport__form-group {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      column-gap: 50px;
+      .form-group__item {
+        display: flex;
+        flex-direction: column;
+
+        &--label {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 24px;
+          color: #343e48;
+        }
+
+        &--select,
+        &--input {
+          margin-top: 10px;
+          width: 100%;
+          background: #f2f4f7;
+          border-radius: 8px;
+          padding: 17.5px 10px;
+        }
+        &--options {
+          margin-top: 24px;
+          display: flex;
+          align-items: center;
+          flex-direction: row;
+
+          .checkbox {
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+            accent-color: #72879e;
+
+            .form-group__item--label {
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 24px;
+              color: #343e48;
+            }
+          }
+        }
+      }
+    }
 
     &-title {
       font-weight: 400;
@@ -56,6 +104,25 @@
         }
       }
     }
+
+    .education {
+      display: flex;
+      flex-direction: column;
+
+      &__list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        max-width: 70%;
+
+        &--button {
+          padding: 10px 40px;
+          background: #f2f4f7;
+          color: #343e48;
+          border-radius: 20px;
+        }
+      }
+    }
   }
 
   .change-options__button {
@@ -64,4 +131,20 @@
     border: 1px solid #72879e;
     border-radius: 6px;
   }
+
+  .next-page__button {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    background: #343e48;
+    padding: 14px 76px;
+    border-radius: 6px;
+    color: #ffffff;
+  }
+}
+
+.active {
+  background: #72879e !important;
+  color: #ffffff !important;
 }
