custom slider dirrective isNOt wokerd

--- a/src/app/pages/main-form-content/sub-pages/processing-page/components/questionnaire-form/questionnaire-form.component.html
+++ b/src/app/pages/main-form-content/sub-pages/processing-page/components/questionnaire-form/questionnaire-form.component.html
@@ -187,7 +187,8 @@
     <div class="monthly_expenses">
       <div class="passport-data__title">Ежемесячные расходы</div>
       <div class="family__form-group">
-        <fieldset class="form-group__item">
+        <app-input-slider></app-input-slider>
+        <!-- <fieldset class="form-group__item">
           <label class="form-group__item--label">
             Обязательные платежи*, ₽
             <input
@@ -209,7 +210,7 @@
               formControlName="loan_repayment"
               class="form-group__item--input"
           /></label>
-        </fieldset>
+        </fieldset> -->
       </div>
     </div>
   </form>
