fix modals for reactive forms

--- a/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-card/insurance-polices-modal-card.component.scss
+++ b/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-card/insurance-polices-modal-card.component.scss
@@ -34,6 +34,9 @@
 
     &__form {
       &--checkbox {
+        width: 24px;
+        height: 24px;
+        accent-color: #72879e;
         margin-right: 10px;
       }
     }
