created car options form

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,5 +46,5 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
-/* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
+// /* Importing Bootstrap SCSS file. */
+// @import 'bootstrap/scss/bootstrap';
