--- a/src/app/pages/main-form-content/sub-pages/calculation-loan-page/components/car-info/car-info.component.scss
+++ b/src/app/pages/main-form-content/sub-pages/calculation-loan-page/components/car-info/car-info.component.scss
@@ -20,6 +20,7 @@
   }
 
   &__details {
+
     width: 100%;
     align-items: flex-start;
     padding: 0px 0px 6px;
@@ -47,10 +48,248 @@
       align-items: flex-start;
       padding: 0px 0px 6px;
       gap: 18px;
-      margin-bottom: 56px;
       color: #343e48;
       margin-left: 35px;
       flex-wrap: wrap;
+
+      &__button {
+        height: 20vh;
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+      }
+
+      &__container {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 18px;
+        flex-wrap: wrap;
+
+        &__toggle {
+          display: flex;
+          flex-direction: column;
+
+          &__main {
+            display: flex;
+
+            .container {
+              display: flex;
+              align-items: center;
+              position: relative;
+              padding-left: 35px;
+              margin-bottom: 12px;
+              cursor: pointer;
+              font-size: 22px;
+              -webkit-user-select: none;
+              -moz-user-select: none;
+              -ms-user-select: none;
+              user-select: none;
+            }
+
+            .container input {
+              position: absolute;
+              opacity: 0;
+              cursor: pointer;
+              height: 0;
+              width: 0;
+              border: 1px solid #96959E;
+              border-radius: 10px;
+            }
+
+            .checkmark {
+              position: absolute;
+              top: 0;
+              left: 0;
+              height: 24px;
+              width: 24px;
+              background: #FFFFFF;
+              border: 1px solid #96959E;
+              border-radius: 4px;
+            }
+
+            .container input:checked ~ .checkmark {
+              background: #72879E;
+            }
+
+            .checkmark:after {
+              content: "";
+              position: absolute;
+              display: none;
+            }
+
+            .container input:checked ~ .checkmark:after {
+              display: block;
+            }
+
+            .container .checkmark:after {
+              left: 8px;
+              top: 4px;
+              width: 7px;
+              height: 11px;
+              border: solid white;
+              border-width: 0 3px 3px 0;
+              -webkit-transform: rotate(45deg);
+              -ms-transform: rotate(45deg);
+              transform: rotate(45deg);
+            }
+          }
+
+          &__switch {
+            position: relative;
+            display: inline-block;
+            width: 48px;
+            height: 20px;
+          }
+
+          &__switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+          }
+
+          &__slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #CAD2DA;
+            -webkit-transition: .4s;
+            transition: .4s;
+          }
+
+          &__slider:before {
+            position: absolute;
+            content: "";
+            height: 16px;
+            width: 16px;
+            left: 3px;
+            bottom: 2px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+          }
+
+          input:checked + &__slider {
+            background-color: #72879E;
+          }
+
+          input:focus + &__slider {
+            box-shadow: 0 0 1px #72879E;
+          }
+
+          input:checked + &__slider:before {
+            -webkit-transform: translateX(26px);
+            -ms-transform: translateX(26px);
+            transform: translateX(26px);
+          }
+
+          &__slider.round {
+            border-radius: 12px;
+          }
+
+          &__slider.round:before {
+            border-radius: 50%;
+          }
+        }
+      }
+
+      &__item {
+        display: flex;
+        flex-direction: column;
+        width: 340px;
+        height: 74px;
+        border-bottom: 1px solid #CAD2DA;
+
+
+        &__radio {
+          width: 340px;
+          height: 74px;
+
+          &__button {
+          display: none;
+          }
+
+          &__button:checked + &__label {
+              border-radius: 10px;
+              background: #72879E;
+          }
+
+          &__label {
+            border-radius: 10px;
+            background-color: #F2F4F7;
+            margin-left: 10px;
+            margin-bottom: 10px;
+            padding: 6px 10px;
+            font-family: 'Gilroy';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 140%;
+
+            &__telematic {
+              font-family: 'Gilroy';
+              font-style: normal;
+              font-weight: 500;
+              font-size: 14px;
+              line-height: 130%;
+              color: #343E48;
+              margin-left: 4px;
+            }
+          }
+        }
+
+        &__label {
+          display: inline-flex;
+          width: 278px;
+          height: 13px;
+          font-family: 'Gilroy';
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 130%;
+          color: #343E48;
+          margin-bottom: 18px;
+
+          &__container {
+            display: flex;
+            flex-direction: column;
+            .label__tooltip {
+              font-family: 'Gilroy';
+              font-style: normal;
+              font-weight: 250;
+              font-size: 12px;
+              line-height: 100%;
+              color: #979797;
+              margin-left: 10px;
+              margin-right: 4px;
+
+            }
+          }
+          &__toggle {
+            margin-left: 10px;
+            margin-bottom: 0px;
+          }
+        }
+        &__input {
+          font-family: 'Gilroy';
+          font-style: normal;
+          font-weight: 500;
+          font-size: 18px;
+          line-height: 21px;
+          color: #343E48;
+
+          &__telematic {
+            margin-right: 14px;
+          }
+
+          &__range {
+            margin-top: 12px;
+          }
+        }
+      }
 
       .mat-slide-toggle:not(.mat-checked) {
         .mat-ripple-element {
@@ -100,15 +339,15 @@
         }
       }
 
-      .mat-slider-thumb-container {
-        .mat-slider-thumb {
-          width: 52px;
-          height: 24px;
-          background: url("/assets/images/background_slider.png") right -3px top -2px;
-          right: -23px;
-          bottom: -12px;
-        }
-      }
+      //.mat-slider-thumb-container {
+      //  .mat-slider-thumb {
+      //    width: 52px;
+      //    height: 24px;
+      //    background: url("/assets/images/background_slider.png") right -3px top -2px;
+      //    right: -23px;
+      //    bottom: -12px;
+      //  }
+      //}
 
       .mat-slider-track-fill {
         background-color: #72879E;
@@ -132,13 +371,6 @@
         }
       }
     }
-
-      &__form__item {
-        width: 340px;
-        height: 74px;
-        &__radio {
-        }
-      }
 
       .mat-slider-horizontal {
         .mat-slider-track-background {
@@ -174,4 +406,3 @@
       }
     }
   }
-
