--- a/src/app/pages/main-form-content/main-form-content-page.component.html
+++ b/src/app/pages/main-form-content/main-form-content-page.component.html
@@ -21,6 +21,7 @@
   <main class="main-container">
     <app-side-bar
       [steps]="calculationSteps"
+      *ngIf="routerLink != '/main-form/documents-payments'"
     ></app-side-bar>
     <router-outlet></router-outlet>
   </main>
