--- a/src/app/pages/main-form-content/sub-pages/documents-payments-page/documents-payments-page.component.scss
+++ b/src/app/pages/main-form-content/sub-pages/documents-payments-page/documents-payments-page.component.scss
@@ -9,7 +9,8 @@
 }
 
 .documents-payments {
-  width: 100%;
+  max-width: 100%;
+  width: 90vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
