--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -14,7 +14,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  font-family: 'Gilroy', sans-serif !important;
   height: 100%;
   width: 100vw;
   font-size: 100%;
@@ -33,7 +33,8 @@ input::-ms-clear {
   display: none;
 }
 
-textarea:focus, input:focus {
+textarea:focus,
+input:focus {
   outline: none;
 }
 
