--- a/src/app/pages/main-form-content/sub-pages/processing-page/components/work/work.component.scss
+++ b/src/app/pages/main-form-content/sub-pages/processing-page/components/work/work.component.scss
@@ -9,6 +9,7 @@
   background: #ffffff;
   box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
   border-radius: 30px;
+  margin-bottom: 75px;
 }
 
 .work {
